fixing planner visibility so that user with no prior data can add a plan, for now; styling; connecting login to dashboard

--- a/src/Styles/Planner.css
+++ b/src/Styles/Planner.css
@@ -26,6 +26,7 @@
 }
 .mealplan-section {
   text-align: center;
+
 }
 
 .bigButton {
@@ -61,4 +62,25 @@
   margin-top: 20px;
   background-color: #ffcb32;
   color: #141514;
+}
+
+#modal-planner {
+  display:flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+#modal-content-planner {
+  border: 2px solid black;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 305px;
+  background-color: #2F7604;
+  color: white;
+  font-weight: bold;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
